[gd_scene load_steps=3 format=3 uid="uid://startscreen"]
[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]
[node name="StartScreen" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TopBar" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.12
margin_top = 0.0
margin_bottom = 90.0

[node name="TopBar/HighScoreLabel" type="Label" parent="TopBar"]
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = 20.0
text = "High Score: 0"
theme_override_fonts/font_size = 24

[node name="CenterPanel" type="Panel" parent="."]
anchor_left = 0.25
anchor_top = 0.18
anchor_right = 0.75
anchor_bottom = 0.85

[node name="CenterPanel/VBox" type="VBoxContainer" parent="CenterPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 20.0
margin_top = 20.0

[node name="CenterPanel/VBox/Title" type="Label" parent="CenterPanel/VBox"]
text = "AIM BLAST"
theme_override_fonts/font_size = 48

[node name="CenterPanel/VBox/Instructions" type="RichTextLabel" parent="CenterPanel/VBox"]
text = "Tap targets on mobile or click with mouse. Targets shrink over time. Hit quickly to score!"
size_flags_vertical = 0

[node name="CenterPanel/VBox/NameInput" type="LineEdit" parent="CenterPanel/VBox"]
placeholder_text = "Enter player name"

[node name="CenterPanel/VBox/StartButton" type="Button" parent="CenterPanel/VBox"]
text = "Start"

[node name="CenterPanel/VBox/CloseButton" type="Button" parent="CenterPanel/VBox"]
text = "Close"

[node name="CenterPanel/VBox/Leaderboard" type="VBoxContainer" parent="CenterPanel/VBox"]
]